# sampling-from-any-distribution

./: .gitignore  README.md  pyproject.toml  sampling.ipynb  sampling_part_2.ipynb
notebooks/: sampling.ipynb  sampling_part_2.ipynb
sampling/: distributions.py  envelopes.py  linear_sampler.py  linear_samplers.py  protocols.py  samplers.py  ziggurat.py
