[tool.poetry]
name = "sampling-from-any-repository"
version = "0.1.0"
description = ""
authors = ["Alex McKenzie <alex.thewlis.mckenzie@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
seaborn = "^0.12.2"
tqdm = "^4.66.1"
pandas = "^2.1.1"
numpy = "^1.26.0"
matplotlib = "^3.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
