[project]
name = "sampling-from-any-distribution"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jax>=0.4.33",
    "numpy>=2.1.1",
    "ipykernel>=6.29.5",
    "imageio>=2.35.1",
    "tqdm>=4.66.5",
    "seaborn>=0.13.2",
    "pandas>=2.2.3",
    "typing-extensions>=4.12.2",
    "ipywidgets>=8.1.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
